--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -17,6 +17,8 @@ gem 'puma', '~> 4.1'
 # gem 'bcrypt', '~> 3.1.7'
 # Use faker to generate dummy data
 gem 'faker'
+# Use fast_jsonapi serializes data
+gem 'fast_jsonapi'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
