--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -21,6 +21,8 @@ gem 'faker'
 gem 'fast_jsonapi'
 # Use rack-cors to allow HTTP request
 gem 'rack-cors', :require => 'rack/cors'
+# Use pry to debug
+gem 'pry'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
